Wrap <time> in <p> to fix margin issues

--- a/css/post.scss
+++ b/css/post.scss
@@ -9,7 +9,7 @@ $section_margin: 0rem;
 $p_margin: 1rem 0;
 
 header {
-	time {
+	p {
 		color: $time_color;
 		font-size: smaller;
 		font-weight: normal;
